# osv-m

./: .gitignore  COPYRIGHT  Cargo.toml  LICENSE  README.md  osv-m_setting_example.yaml
default_html/: error_cannot_load_topics.html  error_has_length_exceeds.html  error_not_found_board.html  error_not_found_topic.html  error_render.html  error_title_or_body_is_empty.html  error_unknown.html  error_user_get.html
extension/: examplecommand.rhai
html/: bbspage.html  bbstable.html  index.html  topic.html
html/user/: fail_userdata_migration.html  info.html  success_userdata_migration.html
misc/: tips.txt
sql/: headline.sql  initial.sql  post_make.sql  posts_get.sql  topic_get.sql  topic_make.sql  topics_get.sql
sql/user/: user_get.sql  user_get_token.sql  user_migration.sql  user_migration_delete_old_data.sql  user_register.sql  user_update.sql
src/: main.rs
src/commands/: base.rs  level.rs  mod.rs
src/controls/: headline.rs  makepost.rs  maketopic.rs  mod.rs  reload.rs  user_info_migration.rs
src/extension/: mod.rs  runtime.rs
src/models/: mod.rs  post.rs  topic.rs  user.rs
src/utils/: get_ip.rs  html.rs  mod.rs  random_id.rs  restriction.rs  setting.rs  tip.rs
src/views/: bbs.rs  bbstable.rs  index.rs  mod.rs  topic.rs  user_info.rs
