[package]
name = "osv-m"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = "0.4.41"
futures-util = "0.3"
once_cell = "1.21.3"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono"] }
tera = "1.20.0"
tokio = { version = "1.47.1", features = ["full"] }
